# ChangeLog for app-editors/emacs-cvs
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-cvs/ChangeLog,v 1.245 2009/05/24 14:02:07 ulm Exp $

  24 May 2009; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-23.0.94.ebuild:
  Update SRC_URI, upstream tarball appeared.

*emacs-cvs-23.0.94 (23 May 2009)

  23 May 2009; Ulrich Mueller <ulm@gentoo.org> +emacs-cvs-23.0.94.ebuild,
  +files/emacs-23.0.94-handle-xz-suffix.patch:
  New prerelease version. Made own tarball from xdelta file, since upstream
  doesn't (yet?) provide a tarball for this version. Add patch to handle
  xz-compressed files.

*emacs-cvs-23.0.93 (01 May 2009)

  01 May 2009; Ulrich Mueller <ulm@gentoo.org> +emacs-cvs-23.0.93.ebuild,
  emacs-cvs-23.0.9999-r1.ebuild:
  New prerelease version from upstream. Remove "freetype" configure option.

  05 Apr 2009; Raúl Porcel <armin76@gentoo.org> emacs-cvs-23.0.92.ebuild,
  emacs-cvs-23.0.9999-r1.ebuild:
  Add ~sh wrt #238712

  04 Apr 2009; Ulrich Mueller <ulm@gentoo.org>
  +files/emacs-23.0.92-sh.patch, emacs-cvs-23.0.92.ebuild,
  emacs-cvs-23.0.9999-r1.ebuild:
  Add __sh__ to the garbage collector conditional in gnu-linux.h. Turn off
  optimisation on sh, in order to fix the build failure of bug 262359.

*emacs-cvs-23.0.92 (31 Mar 2009)

  31 Mar 2009; Ulrich Mueller <ulm@gentoo.org> +emacs-cvs-23.0.92.ebuild:
  New prerelease version from upstream.

  26 Mar 2009; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-23.0.90.ebuild,
  emacs-cvs-23.0.91.ebuild, emacs-cvs-23.0.9999-r1.ebuild:
  Remove redundant WANT_AUTO{CONF,MAKE} settings.

  12 Mar 2009; Ulrich Mueller <ulm@gentoo.org>
  -emacs-cvs-23.0.60_pre20090125.ebuild, emacs-cvs-23.0.90.ebuild,
  emacs-cvs-23.0.91.ebuild, -emacs-cvs-23.0.9999.ebuild,
  emacs-cvs-23.0.9999-r1.ebuild:
  Fix dependencies: package x11-misc/emacs-desktop was moved to
  app-emacs/emacs-common-gentoo; aspell/ispell is not needed at build time.