@@ -1,4 +1,4 @@
 AUX emacs-23.0.92-sh.patch 446 RMD160 b1a3ee15e5f690a8c4f5a1d0740aae6d65e61513 SHA1 1ac571ac9a47d9ce4583c8cb6745fa7646d8e621 SHA256 e609f84435f3e22daa013262078f6cc7875664f895f0edd9a73b55fcb38ab888
-EBUILD emacs-cvs-23.0.9999-r1.ebuild 9672 RMD160 e747e6e2d97785d1a28dd76e348e2193e9e1ae76 SHA1 400206aa4b734d4a2cb6d4729e756c776827581d SHA256 de52c9460603f90202a5ef157c5f845afa7d29f883ae7b8b3e7a2d252aa0f76e
-MISC ChangeLog 45969 RMD160 d1926ac09cd90140a357424e69a8cd88cd1bc13c SHA1 68727c7b4a4908e320ebbefc70ae14e6384e9d81 SHA256 d46dbd46f31339a7115ac3cf0df460071203c8c8f214312d5d11f7f9e7dd0335
+EBUILD emacs-cvs-23.0.9999-r1.ebuild 9617 RMD160 54ec9cea05654a31c967be616b31672304487cd2 SHA1 e40c62e66449c87277b01d472dd37f9d42b396f8 SHA256 69d16f4b95f95aca08a056ccd3171c94c80144de16966681616d6867b689fce4
+MISC ChangeLog 46281 RMD160 cda89153b810e9692478de9fb4176b5beaa548f4 SHA1 4d77ed95b71c7f88577438d849e91f1af068a984 SHA256 2795f18aec5418b82267b3350c6a40e8c3d38b86a5b89c552d767fbebf62d666
 MISC metadata.xml 1529 RMD160 e40abfeff829d64e9f7d699d4e8fc5c4d6097bb5 SHA1 b2c01905cf0230739a45ad86bfbec800f8562c9f SHA256 b24dbef03ac32c182f69573275d416d664537eee2667e1e8c3199d4d34f3b20e
